--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="abas-textos">
             <div class="aba-conteudo ativo">
-                <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
+                <h3 class="aba-conteudo-titulo-principal">Estudar pelo cursinho e praticar em fins de semana</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                 <div class="contador">
                     <div class="contador-digito">
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Criar 5 projetos em Javascript</h3>
+                <h3 class="aba-conteudo-titulo-principal">Iniciar o pagamento na autoescola</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                 <div class="contador">
                     <div class="contador-digito">
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Criar um portfolio com os meus 3 melhores projetos</h3>
+                <h3 class="aba-conteudo-titulo-principal">Guardar dinheiro</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                 <div class="contador">
                     <div class="contador-digito">
@@ -85,7 +85,7 @@
                 </div>
             </div>
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Atualizar meu curriculo com os certificados da Alura</h3>
+                <h3 class="aba-conteudo-titulo-principal">Pesquisar modelos e ideias</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                 <div class="contador">
                     <div class="contador-digito">
